# End-To-End-Diabetes-Predictor-Using-XGBoost

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
diabetes_predictor/: pyproject.toml
diabetes_predictor/backend/app/: main.py  schemas.py
diabetes_predictor/backend/app/routes/: predict.py
diabetes_predictor/backend/app/services/: predictor.py
diabetes_predictor/backend/app/utils/: logger.py
diabetes_predictor/backend/models/: README.md
diabetes_predictor/frontend/: streamlit_app.py
diabetes_predictor/ml_pipeline/: generate_processed_data.py  test_preprocessing.py
diabetes_predictor/ml_pipeline/data/: README.md
diabetes_predictor/ml_pipeline/data/processed/: diabetes_processed.csv
diabetes_predictor/ml_pipeline/notebooks/: 01_eda.ipynb  02_training.ipynb
diabetes_predictor/ml_pipeline/src/preprocessing/: preprocessing.py
diabetes_predictor/ml_pipeline/src/training/: evaluator.py  train.py
diabetes_predictor/ml_pipeline/src/utils/: load_data.py  registry.py
