[project]
name = "diabetes-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "ipykernel>=7.1.0",
    "joblib==1.3.2",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.6",
    "scikit-learn==1.3.2",
    "seaborn>=0.13.2",
    "streamlit>=1.28.0",
    "uvicorn[standard]==0.27.0",
    "xgboost==1.7.6",
    "shap==0.44.1",
    "requests>=2.31.0",
    "plotly==5.18.0"
]